# python_algos

./: main.py  pyproject.toml
excercises/: count_highest.py  default_arg.py  dicts.py  get_data_parse.py  test_counter.py
excercises/airtable/: README.MD  airtable_json_update.py  extract_filter_evaluate.py
tests/: test_counter.py  test_counter_pytest.py
